--- a/index.html
+++ b/index.html
@@ -2,46 +2,47 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Results summary component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Your Result
-  76
-  of 100
-
-  Great
-  You scored higher than 65% of the people who have taken these tests.
-  
-  Summary
-
-  Reaction
-  80 / 100
-
-  Memory
-  92 / 100
-
-  Verbal
-  61 / 100
-
-  Visual
-  72 / 100
-
-  Continue
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <!-- CONTAINER -->
+  <div class="container">
+    <!-- CONTAINER LEFT -->
+    <div class="container-left">
+      <div class="result"><h3>Your Result</h3></div>
+      <div class="circle">
+        <div class="num">76</div>
+        <div class="num2">if 100</div>
+      </div>
+      <div class="great">Great</div>
+      <div class="people">You scored higher than 65% of the people who have taken these tests.</div>
+    </div>
+    <!-- CONTAINER RIGHT -->
+    <div class="container-right">
+      <div class="summary"><h3>Summary</h3></div>
+      <div class="reaction">Reaction 
+        <div class="reaction-num"><span>80</span> / 100</div>
+      </div>
+      <div class="memory">Memory 
+        <div class="memory-num"><span>92</span> / 100</div>
+      </div>
+      <div class="verbal">Verbal 
+        <div class="verbal-num"><span>61</span> / 100</div>
+      </div>
+      <div class="visual">Visual 
+        <div class="visual-num"><span>72</span> / 100</div>
+      </div>
+    </div>
   </div>
+  
+
+<!-- FOOTER -->
+<div class="footer">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://github.com/mkamburdev" target="_blank">mkamburdev</a>.
+</div>
 </body>
 </html>
