index.html edited

--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
       </div>
     </div>
   </div>
+  <!-- BUTTON -->
+  <div class="button"><button>Continue</button> </div>
   
+   
 
 <!-- FOOTER -->
 <div class="footer">
